# pytroll-cspp-runner

./: .bumpversion.cfg  AUTHORS.md  README.md  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
continuous_integration/: environment.yaml
cspp_runner/: __init__.py  atms_rdr2sdr_runner.py  constants.py  cspp_utils.py  logger.py  orbitno.py  post_cspp.py  pre_cspp.py  runner.py  viirs_dr_runner.py
cspp_runner/tests/: __init__.py  conftest.py  test_config.py  test_post_cspp.py  test_run_atms.py  test_runner.py  test_utils.py  test_viirs_dr_runner.py
examples/: atms_dr_config.cfg_template  atms_dr_config.yaml_template  log_config.yaml_template  npp_ingester.py  publisher-config.yaml_template  viirs_dr_config.cfg_template
