[options]
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive
            
[options.entry_points]
console_scripts =
    viirs_dr_runner = cspp_runner.viirs_dr_runner:main

[bdist_rpm]
provides=cspp_runner
requires=posttroll
no-autoreq=True
release=1

[bdist_wheel]
universal=1

[flake8]
max-line-length = 120

[coverage:run]
source = ./

